--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,11 @@ body {
   font-family: 'Roboto Slab', serif;
 }
 
-header, h1, h2, h3, h4, h5, h6, main .pagination.button, footer {
+header, 
+h1, h2, h3, h4, h5, h6, 
+main .pagination.button, 
+main .font-sans, 
+footer {
   font-family: 'Barlow Condensed', sans-serif;
 }
 
