--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,6 @@ footer {
   font-family: 'Barlow Condensed', sans-serif;
 }
 
-header section, main section, footer section {
-  padding: 16px;
-}
-
 /* main */
 
 main a {
@@ -95,7 +91,7 @@ th {
 main section article h2, 
 main section article h3, 
 main section article h4 {
-  margin: 24px 0;
+  margin: 16px 0;
 }
 
 main article h2 {
@@ -142,20 +138,30 @@ main article ol > li > li > li {
 
 /* responsive */
 
+header section, main section, footer section {
+  margin: 16px 0;
+}
+
 @media screen and (min-width: 1024px) {
 
-  header section {
+  header section, footer section {
     gap: 24px;
     padding: 24px 0;
   }
 
-  main section, footer section {
-    padding: 24px 0;
+  header section, main section > div, footer section {
+    max-width: 1024px;    
+    margin: 0 auto;  
   }
 
-  header section, main section > div, footer section {
-    max-width: 1024px;  
-    margin: 0 auto;
+  main section > div {
+    margin: 24px auto;
+    padding: 0;
+  }
+
+  main section:last-child > div {
+    margin: 24px auto 0 auto;
+    padding: 0;
   }
   
 }
