--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -142,6 +142,13 @@ header section, main section, footer section {
   margin: 16px 0;
 }
 
+@media screen and (max-width: 1024px) {
+  header section, main section, footer section {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+
 @media screen and (min-width: 1024px) {
 
   header section, footer section {
