--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:wght@300;400;500;600;700;800;900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,16 +8,13 @@
 /* generics */
 
 body {
-  font-family: 'Roboto Slab', serif;
-}
-
-header, 
-h1, h2, h3, h4, h5, h6, 
-main .pagination.button, 
-main .font-sans, 
-footer {
   font-family: 'Barlow Condensed', sans-serif;
 }
+
+p {
+  margin: 12px 0;
+}
+
 
 /* main */
 
@@ -36,18 +33,17 @@ main a:hover {
 }
 
 main .button {
-  background-color: white;  
+  background: transparent;  
   color: black;  
   display: inline-block;
-  border: 1px solid black;
+  border: 2px solid black;
   margin: 0;
   padding: 0.5rem 1.25rem;
   cursor: pointer;
 }
 
 main .button:hover {
-  background-color: black; 
-  border: 1px solid black; 
+  background-color: black;   
   color: white;
   text-decoration: none;
 }
@@ -57,11 +53,12 @@ main .pagination.button.current {
   color: white;
 }
 
-main p {
-  margin: 24px 0;
+article {
+  font-family: 'PT Serif', serif;
+  letter-spacing: 0.5px;
 }
 
-main li p {
+article li p {
   margin: 12px 0;
 }
 
