--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,7 @@
 @tailwind utilities;
 
 main .button {
-  background: transparent;  
+  background: white;  
   color: black;  
   display: inline-block;
   border: 1px solid black;
@@ -18,17 +18,6 @@ main .button {
 main .button:hover {
   background-color: black;   
   color: white;
-  text-decoration: none;
-}
-
-.dark main .button {
-  border: 1px solid white;
-  color: white;
-}
-
-.dark main .button:hover {
-  background-color: white;
-  color: black;
   text-decoration: none;
 }
 
